[package]
name = "storm_daenerys_common"
version = "1.0.0"
authors = ["Thomas Bellembois <thomas.bellembois@uca.fr]>"]
description = "STORM Daenerys common"
repository = "https://git.mesocentre.uca.fr/mesocentre/storm-daenerys-common"
rust-version = "1.77"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
